Select multiple options with mouse drag in Select element. https://bugs.webkit.org/show_bug.cgi?id=71128

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2011-11-09
Reviewed by Ryosuke Niwa.

Multiple selection of option elements in select element with an mouse drag.
Other browsers(IE, Firefox, Opera) support this feature.

Source/WebCore:

Test: fast/forms/select-multiple-elements-with-mouse-drag.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMouseDraggedEvent):
Allow auto scroll to be fired if current node(option) under mouse does not have renderer
but its container node(select) can autoscroll and has renderer for specific case of ListBox

LayoutTests:

* fast/forms/select-multiple-elements-with-mouse-drag-expected.txt: Added.
* fast/forms/select-multiple-elements-with-mouse-drag.html: Added.

Canonical link: https://commits.webkit.org/88234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99667 268f45cc-cd09-0410-ab3c-d52691b4dbfc